@@ -1,3 +1,8 @@
+2015-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* fwrite.c: Some compilers mishandle the use of sizeof(buf)
+	inside C99 variadic macros, so we replace it by BUFFERLEN.
+
 2014-07-05  TANAKA Takuji  <KXD02663@nifty.ne.jp>
 
 	* convert.c: Better timing for xstrdup.
